--- a/projects.html
+++ b/projects.html
@@ -74,17 +74,77 @@
             </div>
             
             <div class="projects-grid">
-                <!-- Project 1 -->
+                <!-- Project 5 -->
+                <div class="project-card">
+                    <div class="project-icon">🌊</div>
+                    <h3>Carbon Ocean</h3>
+                    <div class="project-meta">
+                        <span class="project-date">2025</span>
+                        <span class="project-tags">#Shipping #Transport</span>
+                    </div>
+                    <p class="project-desc">Carbon Ocean is a maritime emissions tracker that monitors and visualizes shipping‑related carbon output, helping users assess and manage environmental impact in the marine industry</p>
+                    <div class="project-links">
+                        <a href="https://carbonocean.streamlit.app/" target="_blank" class="btn-secondary">Website</a>
+                        <a href="#" class="btn-tertiary">Patent</a>
+                    </div>
+                </div>
+
+                <!-- Project 4 -->
+                <div class="project-card">
+                    <div class="project-icon">🏠</div>
+                    <h3>Neo-Rent CyberOracle</h3>
+                    <div class="project-meta">
+                        <span class="project-date">2025</span>
+                        <span class="project-tags">#AI #Housing</span>
+                    </div>
+                    <p class="project-desc">An AI-powered housing forecaster that delivers current rent and housing price data for any U.S. state, then projects future costs based on bedroom count and chosen time horizon</p>
+                    <div class="project-links">
+                        <a href="https://rent-price-predictor.netlify.app/" target="_blank" class="btn-secondary">Website</a>
+                        <a href="#" class="btn-tertiary">Patent</a>
+                    </div>
+                </div>
+
+                <!-- Project 3 -->
+                <div class="project-card">
+                    <div class="project-icon">📈</div>
+                    <h3>NeonStock</h3>
+                    <div class="project-meta">
+                        <span class="project-date">2025</span>
+                        <span class="project-tags">#AI #Stocks</span>
+                    </div>
+                    <p class="project-desc">An AI-driven market oracle that compiles real-time data, key metrics, and news on user-selected stocks, projecting future price movements with precision forecasting</p>
+                    <div class="project-links">
+                        <a href="https://stockpriceproject.netlify.app/" target="_blank" class="btn-secondary">Website</a>
+                        <a href="#" class="btn-tertiary">Patent</a>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-icon">🧠</div>
-                    <h3>NeuralLink OS</h3>
+                    <h3>CinseSense AI</h3>
                     <div class="project-meta">
-                        <span class="project-date">2023</span>
-                        <span class="project-tags">#AI #BCI</span>
+                        <span class="project-date">2025</span>
+                        <span class="project-tags">#AI #Emotion</span>
                     </div>
-                    <p class="project-desc">Next-gen brain-computer interface operating system enabling direct neural control of digital environments.</p>
+                    <p class="project-desc">Sentiment engine that decodes user reviews into precision mood indices, mapped on a -3 to 3 scale for instant emotional diagnostics</p>
                     <div class="project-links">
-                        <a href="#" class="btn-secondary">Case Study</a>
+                        <a href="https://ai-sentiment-analysis-sid.netlify.app/" target="_blank" class="btn-secondary">Website</a>
+                        <a href="#" class="btn-tertiary">Patent</a>
+                    </div>
+                </div>
+
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <div class="project-icon">📡</div>
+                    <h3>Weather App</h3>
+                    <div class="project-meta">
+                        <span class="project-date">2025</span>
+                        <span class="project-tags">#Weather #AI</span>
+                    </div>
+                    <p class="project-desc">This weather app provides real-time forecasts and a 5-day outlook—simply enter a city name or click on the map to view current conditions, toggle between °C/°F, and explore detailed weather data</p>
+                    <div class="project-links">
+                        <a href="https://weather-cli-shev.onrender.com/" target="_blank" class="btn-secondary">Website</a>
                         <a href="#" class="btn-tertiary">Live Demo</a>
                     </div>
                 </div>
