--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="log-meta">
                         <span class="read-time">8 min read</span>
-                        <a href="blog/neural-training.html" class="btn-ghost">Full Transmission →</a>
+                        <a href="blog-posts/testBlog.html" class="btn-ghost">Full Transmission →</a>
                     </div>
                 </article>
                 
