--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
         <div class="stats-container">
             <div class="stats-grid">
                 <div class="stat-item">
-                    <span class="stat-number">8+</span>
+                    <span class="stat-number">3+</span>
                     <span class="stat-label">Years Experience</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">24</span>
+                    <span class="stat-number">14</span>
                     <span class="stat-label">Projects Completed</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">12</span>
+                    <span class="stat-number">10</span>
                     <span class="stat-label">Research Papers</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">5</span>
-                    <span class="stat-label">Patents</span>
+                    <span class="stat-number">25</span>
+                    <span class="stat-label">Blogs</span>
                 </div>
             </div>
         </div>
@@ -107,16 +107,12 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-links">
-                <a href="privacy.html">Privacy Policy</a>
-                <span class="footer-separator">•</span>
-                <a href="terms.html">Terms</a>
-                <span class="footer-separator">•</span>
                 <a href="https://github.com/SiddheshwarTewari">GitHub</a>
                 <span class="footer-separator">•</span>
-                <a href="https://linkedin.com/in/sidtewari">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sid-tewari-1b98332a2/">LinkedIn</a>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Sid Tewari. All rights reserved.</p>
+                <p>&copy; 2024 Sid Tewari. All rights reserved.</p>
                 <p class="footer-credit">Powered by <a href="#" target="_blank">NeuralCore</a></p>
             </div>
         </div>
