--- a/papers.html
+++ b/papers.html
@@ -247,16 +247,12 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-links">
-                <a href="privacy.html">Privacy Policy</a>
-                <span class="footer-separator">•</span>
-                <a href="terms.html">Terms</a>
-                <span class="footer-separator">•</span>
                 <a href="https://github.com/SiddheshwarTewari">GitHub</a>
                 <span class="footer-separator">•</span>
-                <a href="https://linkedin.com/in/sidtewari">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sid-tewari-1b98332a2/">LinkedIn</a>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Sid Tewari. All rights reserved.</p>
+                <p>&copy; 2024 Sid Tewari. All rights reserved.</p>
                 <p class="footer-credit">Powered by <a href="#" target="_blank">NeuralCore</a></p>
             </div>
         </div>
@@ -264,7 +260,6 @@
 
     <script src="js/scripts.js"></script>
     <script>
-        // Papers-specific JavaScript
         document.addEventListener('DOMContentLoaded', function() {
             // Sort functionality
             const sortSelect = document.querySelector('.sort-select');
