--- a/blog.html
+++ b/blog.html
@@ -74,9 +74,11 @@
                 <div class="category-filters">
                     <span class="filter active" data-filter="all">All Entries</span>
                     <span class="filter" data-filter="ai">AI</span>
+                    <span class="filter" data-filter="media">Media</span>
+                    <span class="filter" data-filter="chatbot">Chatbot</span>
                     <span class="filter" data-filter="neuro">Neurotech</span>
                     <span class="filter" data-filter="quantum">Quantum</span>
-                    <span class="filter" data-filter="ethics">Ethics</span>
+                    <span class="filter" data-filter="systems">Systems</span>
                 </div>
             </div>
             
@@ -90,11 +92,45 @@
                     </div>
                     <h3 class="log-title">GPT‑5 vs Grok‑4: Performance Metrics</h3>
                     <div class="log-excerpt">
-                        <p>A practical framework to compare GPT‑5 and Grok‑4 across reasoning, coding, latency, context, and cost — with a reproducible benchmark template and reporting checklist.</p>
+                        <p>A practical framework to compare GPT‑5 and Grok‑4 across reasoning, coding, latency, context, and cost with a reproducible benchmark template and reporting checklist.</p>
                     </div>
                     <div class="log-meta">
                         <span class="read-time">4 min read</span>
                         <a href="blog-posts/gpt5-vs-grok4.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry: CineLit -->
+                <article class="log-entry fade-up" data-categories="ai media">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                        <span class="log-category media">Media</span>
+                    </div>
+                    <h3 class="log-title">How I Built a Media Recommendation System</h3>
+                    <div class="log-excerpt">
+                        <p>My experience putting together an entire Media Recommendation System using AI, specifically DeepSeek API key.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">6 min read</span>
+                        <a href="blog-posts/CineLit.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry: NeuroSync -->
+                <article class="log-entry fade-up" data-categories="ai media">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                        <span class="log-category chatbot">Chatbot</span>
+                    </div>
+                    <h3 class="log-title">My very own AI Chatbot</h3>
+                    <div class="log-excerpt">
+                        <p>My journey building my very own Generative AI chatbot.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">5 min read</span>
+                        <a href="blog-posts/NeuroSync.html" class="btn-ghost">Full Transmission »</a>
                     </div>
                 </article>
 
