--- a/papers.html
+++ b/papers.html
@@ -69,7 +69,7 @@
     <section class="knowledge-repository">
         <div class="repo-container">
             <div class="section-header">
-                <h2 class="section-title">KNOWLEDGE REPOSITORY</h2>
+                <h2 class="section-title">KNOWLEDGE REPOSITORY (In progress)</h2>
                 <p class="section-subtitle">Peer-reviewed publications and technical manuscripts</p>
                 <div class="repo-controls">
                     <div class="search-bar">
