adding some more blogs

--- a/blog.html
+++ b/blog.html
@@ -77,8 +77,9 @@
                     <span class="filter" data-filter="media">Media</span>
                     <span class="filter" data-filter="chatbot">Chatbot</span>
                     <span class="filter" data-filter="neuro">Neurotech</span>
-                    <span class="filter" data-filter="quantum">Quantum</span>
+                    <span class="filter" data-filter="image">Image</span>
                     <span class="filter" data-filter="systems">Systems</span>
+                    <span class="filter" data-filter="mlops">ML Ops</span>
                 </div>
             </div>
             
@@ -88,7 +89,7 @@
                     <div class="log-header">
                         <span class="log-date">[2025-09-02]</span>
                         <span class="log-category ai">AI</span>
-                        <span class="log-category systems">SYSTEMS</span>
+                        <span class="log-category systems">Systems</span>
                     </div>
                     <h3 class="log-title">GPT‑5 vs Grok‑4: Performance Metrics</h3>
                     <div class="log-excerpt">
@@ -97,6 +98,22 @@
                     <div class="log-meta">
                         <span class="read-time">4 min read</span>
                         <a href="blog-posts/gpt5-vs-grok4.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry: ML Ops Dashboard -->
+                <article class="log-entry fade-up" data-categories="mlops">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category mlops">ML Ops</span>
+                    </div>
+                    <h3 class="log-title">Building a ML Ops Dashboard for Small Teams</h3>
+                    <div class="log-excerpt">
+                        <p>No more giant spreadsheets or "it works on my machine." My dashboard tracks model performance, latency, and data drift with just a Pickle file.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">5 min read</span>
+                        <a href="blog-posts/MLOps.html" class="btn-ghost">Full Transmission »</a>
                     </div>
                 </article>
 
@@ -117,8 +134,25 @@
                     </div>
                 </article>
 
+                <!-- Entry: NeuroImagin -->
+                 <article class="log-entry fade-up" data-categories="ai image">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                        <span class="log-category image">Image</span>
+                    </div>
+                    <h3 class="log-title">Text to Image AI: My Journey with OpenAI</h3>
+                    <div class="log-excerpt">
+                        <p>My experience putting together an image generator using OpenAI's DALLE model.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">4 min read</span>
+                        <a href="blog-posts/NeuroImagin.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
                 <!-- Entry: NeuroSync -->
-                <article class="log-entry fade-up" data-categories="ai media">
+                <article class="log-entry fade-up" data-categories="ai chatbot">
                     <div class="log-header">
                         <span class="log-date">[2025-09-02]</span>
                         <span class="log-category ai">AI</span>
@@ -131,6 +165,22 @@
                     <div class="log-meta">
                         <span class="read-time">5 min read</span>
                         <a href="blog-posts/NeuroSync.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry: CarbonOcean -->
+                <article class="log-entry fade-up" data-categories="ai">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                    </div>
+                    <h3 class="log-title">How I Built CarbonOcean to Visualize Maritime Emissions</h3>
+                    <div class="log-excerpt">
+                        <p>With the help of Python and Streamlit, I created a tool to make the complex world of shipping emissions transparent and actionable for everyone.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">4 min read</span>
+                        <a href="blog-posts/CarbonOcean.html" class="btn-ghost">Full Transmission »</a>
                     </div>
                 </article>
 
