--- a/blog.html
+++ b/blog.html
@@ -76,10 +76,11 @@
                     <span class="filter" data-filter="ai">AI</span>
                     <span class="filter" data-filter="media">Media</span>
                     <span class="filter" data-filter="chatbot">Chatbot</span>
-                    <span class="filter" data-filter="neuro">Neurotech</span>
+                    <!-- <span class="filter" data-filter="neuro">Neurotech</span> -->
                     <span class="filter" data-filter="image">Image</span>
                     <span class="filter" data-filter="systems">Systems</span>
                     <span class="filter" data-filter="mlops">ML Ops</span>
+                    <span class="filter" data-filter="housing">Housing</span>
                 </div>
             </div>
             
@@ -98,6 +99,23 @@
                     <div class="log-meta">
                         <span class="read-time">4 min read</span>
                         <a href="blog-posts/gpt5-vs-grok4.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry: JourneyMLOps -->
+                <article class="log-entry fade-up" data-categories="ai mlops">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                        <span class="log-category mlops">ML Ops</span>
+                    </div>
+                    <h3 class="log-title">My Journey Learning ML Ops as an AI Student</h3>
+                    <div class="log-excerpt">
+                        <p>AI is all about how to build accurate models, but that is only half the battle.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">6 min read</span>
+                        <a href="blog-posts/JourneyMLOps.html" class="btn-ghost">Full Transmission »</a>
                     </div>
                 </article>
 
@@ -184,11 +202,44 @@
                     </div>
                 </article>
 
-                <!-- Entry 1 -->
+                <!-- Entry: NeoRent -->
+                <article class="log-entry fade-up" data-categories="ai housing">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                        <span class="log-category housing">Housing</span>
+                    </div>
+                    <h3 class="log-title">Predicting Home Prices using AI</h3>
+                    <div class="log-excerpt">
+                        <p>Turning spreadsheets of market data into future predictions.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">4 min read</span>
+                        <a href="blog-posts/NeoRent.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry: PromptEngineering -->
+                <article class="log-entry fade-up" data-categories="ai">
+                    <div class="log-header">
+                        <span class="log-date">[2025-09-02]</span>
+                        <span class="log-category ai">AI</span>
+                    </div>
+                    <h3 class="log-title">The Art of Prompt Engineering</h3>
+                    <div class="log-excerpt">
+                        <p>I learned that talking to AI isn't about typing commands, it's about learning a new language of thought.</p>
+                    </div>
+                    <div class="log-meta">
+                        <span class="read-time">4 min read</span>
+                        <a href="blog-posts/PromptEngineering.html" class="btn-ghost">Full Transmission »</a>
+                    </div>
+                </article>
+
+                <!-- Entry 1 
                 <article class="log-entry fade-up" data-categories="ai neuro">
                     <div class="log-header">
                         <span class="log-date">[2023-07-15]</span>
-                        <span class="log-category ai">AI</span>
+                        <span class="log-category ai">AI</span> 
                         <span class="log-category neuro">NEURO</span>
                     </div>
                     <h3 class="log-title">Direct Neural Training of AI Models</h3>
@@ -199,7 +250,7 @@
                         <span class="read-time">8 min read</span>
                         <a href="blog-posts/testBlog.html" class="btn-ghost">Full Transmission →</a>
                     </div>
-                </article>   
+                </article>  --> 
             </div>
         </div>
     </section>
