--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h1 class="hero-title">
                 <span class="hero-nexus">SID</span><span class="hero-flow">TEWARI</span>
             </h1>
-            <p class="hero-subtitle">Cybernetic Researcher | AI Specialist | Neural Interface Developer</p>
+            <p class="hero-subtitle">Deep Learning Researcher | AI Specialist | ML Developer | ML Ops Builder </p>
             <div class="hero-buttons">
                 <a href="projects.html" class="btn-primary">View My Work</a>
                 <a href="papers.html" class="btn-secondary">Read Publications</a>
@@ -92,11 +92,11 @@
                     <span class="stat-label">Projects Completed</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">10</span>
+                    <span class="stat-number">5</span>
                     <span class="stat-label">Research Papers</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">25</span>
+                    <span class="stat-number">15</span>
                     <span class="stat-label">Blogs</span>
                 </div>
             </div>
